<resources>

    <string name="app_name">Telegram</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Azat Azmetov</string>
    <string name="settings_default_status">в сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_number">+791111111111</string>
    <string name="settings_label_phone_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_default_login">azmetov</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">register image</string>
    <string name="register_text_enter_code">Введите код:</string>
    <string name="register_text_we_send">Мы отправили СМС с кодом проверки на ваш телефон</string>
    <string name="register_text_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="register_phone_hint">+- --- --- -- --</string>

</resources>